# MixedReality-WebRTC

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTORS  Microsoft.MixedReality.WebRTC.sln  NOTICE  README.md  README.undock.md  SUPPORT.md  azure-pipelines.yml  cgmanifest.json  index.html  index.json  manifest.json  toc.html  xrefmap.yml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
android/: .gitignore  BUILD.md  build.gradle  settings.gradle
android/WebRTC-Native/src/main/cpp/: CMakeLists.txt
android/app/: build.gradle
android/libwebrtc/: build.gradle
api/: Microsoft.MixedReality.WebRTC.ARGBVideoFrame.html  Microsoft.MixedReality.WebRTC.ARGBVideoFrameDelegate.html  Microsoft.MixedReality.WebRTC.ARGBVideoFrameStorage.html  Microsoft.MixedReality.WebRTC.Argb32VideoFrame.html  Microsoft.MixedReality.WebRTC.Argb32VideoFrameDelegate.html  Microsoft.MixedReality.WebRTC.Argb32VideoFrameRequestDelegate.html  Microsoft.MixedReality.WebRTC.Argb32VideoFrameStorage.html  Microsoft.MixedReality.WebRTC.AudioDeviceModule.html  Microsoft.MixedReality.WebRTC.AudioFrame.html  Microsoft.MixedReality.WebRTC.AudioFrameDelegate.html  Microsoft.MixedReality.WebRTC.AudioTrackReadBuffer.PadBehavior.html  Microsoft.MixedReality.WebRTC.AudioTrackReadBuffer.html  Microsoft.MixedReality.WebRTC.AudioTrackSource.html  Microsoft.MixedReality.WebRTC.BufferTooSmallException.html  Microsoft.MixedReality.WebRTC.BundlePolicy.html  Microsoft.MixedReality.WebRTC.DataChannel.BufferingChangedDelegate.html  Microsoft.MixedReality.WebRTC.DataChannel.ChannelState.html  Microsoft.MixedReality.WebRTC.DataChannel.MessageKind.html  Microsoft.MixedReality.WebRTC.DataChannel.html  Microsoft.MixedReality.WebRTC.DataChannelNotOpenException.html  Microsoft.MixedReality.WebRTC.DeviceAudioTrackSource.html  Microsoft.MixedReality.WebRTC.DeviceVideoTrackSource.html  Microsoft.MixedReality.WebRTC.ExternalVideoTrackSource.html  Microsoft.MixedReality.WebRTC.FrameRequest.html  Microsoft.MixedReality.WebRTC.I420AVideoFrame.html  Microsoft.MixedReality.WebRTC.I420AVideoFrameDelegate.html  Microsoft.MixedReality.WebRTC.I420AVideoFrameRequestDelegate.html  Microsoft.MixedReality.WebRTC.I420AVideoFrameStorage.html  Microsoft.MixedReality.WebRTC.I420VideoFrameDelegate.html  Microsoft.MixedReality.WebRTC.I420VideoFrameStorage.html  Microsoft.MixedReality.WebRTC.IAudioSource.html  Microsoft.MixedReality.WebRTC.IAudioTrack.html  Microsoft.MixedReality.WebRTC.ILogSink.html  Microsoft.MixedReality.WebRTC.ISignaler.html  Microsoft.MixedReality.WebRTC.IVideoFrameQueue.html  Microsoft.MixedReality.WebRTC.IVideoFrameStorage.html  Microsoft.MixedReality.WebRTC.IVideoSource.html  Microsoft.MixedReality.WebRTC.IVideoTrack.html  Microsoft.MixedReality.WebRTC.IceCandidate.html  Microsoft.MixedReality.WebRTC.IceConnectionState.html  (+155 more)
docs/: README.template.md  docfx.json  filterConfig.yml  generate.ps1  generateDocs.ps1  index.md  toc.md  unity-components.md
docs/manual/: avplayback.md  building-core.md  building-cslib.md  toc.md  (+28 more)
examples/: Directory.Build.props
libs/: README.md
manual/: avplayback.html  building-core.html  building-cslib.html  building-windows.html  building.html  download.html  gettingstarted.html  glossary.html  helloworld-cs.html  helloworld-unity-connection.html  helloworld-unity-createproject.html  helloworld-unity-importwebrtc.html  helloworld-unity-localvideo.html  helloworld-unity-peerconnection.html  helloworld-unity-remotevideo.html  helloworld-unity-signaler.html  helloworld-unity.html  installation.html  introduction.html  migration-guide.html  peerconnection.html  signaling.html  toc.html  unity-components.html  unity-integration.html  unity-localaudiosource.html  unity-localvideosource.html  unity-mediaplayer.html  unity-peerconnection.html  unity-remoteaudiosource.html  unity-remotevideosource.html  unity-signaler.html
projects/: README.md
projects/android/webrtc-native/src/main/cpp/: CMakeLists.txt  jni_onload.cpp
styles/: branch-selector.js  branches.gen.js  main.css
tests/: Directory.Build.props
tools/: ChromiumThirdPartyNoticeConfig.json  copy_unity_plugins.bat  generateChromiumThirdPartyNotice.ps1
(+1074 files in other folders)
